[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pltoolkit"
version = "0.1.0"
description = "Photoluminescence toolkit for phonon-assisted spectra"
authors = [
    { name="Mridul", email="res.mridul@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
